# baton

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMPLETION_PLAN.md  CONTEXT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  KNOWN_LIMITATIONS.md  LICENSE  README.md  baton_core.py  docker-compose.yml  install.ps1  install.sh  launch_dev.ps1  memory_test.py  multi_agent.py  orchestrator.py  projskep_core.py  pyproject.toml  requirements-server.txt  requirements.txt  run.ps1  run.sh  start.sh  test_baton.py  test_projskep.py  tools_agent.py  watcher_agent.py
.github/workflows/: repo_audit.yml
agents/: distillation_node.py  nodes.py
baton/agents/: distillation_node.py  nodes.py
baton_server/: main.py
baton_ui/: index.html  package-lock.json  package.json
configs/: aider_config.yml  continue_config.json
docs/: ARCHITECTURE.md  DEPENDENCIES.md  FRICTION_LOG.md  RUNTIME.md  active-task.md  architecture.md  integrations.md  memory-topology.md
graphs/: router_graph.py
memory/: manager.py
projskep_memory/: chroma.sqlite3
projskep_server/: main.py
projskep_ui/: index.html  package-lock.json  package.json  tailwind.config.js
retrieval/: pipeline.py  structural_index.py
runtime/: context_budget.py  dos_sync.py  workflows.py
scripts/: event_orchestrator.py  ingest_docs.py  update_architecture.py  validate_continuity.py
tasks/: architecture_review.py  benchmark_real_workflows.py  repo_analysis.py  task2.txt  task3.txt  task5.txt
tests/: test_api.py  test_attention_engine.py  test_db_manager.py  test_schemas.py  test_websocket.py
(+79 files in other folders)
