[project]
name = "baton-cognition-stack"
version = "0.1.0"
description = "Modular local cognition workstation for Baton"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.20.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "watchdog>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]
